--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main class="max-w-xs md:grid md:grid-cols-2 md:max-w-xl md:shadow-2xl md:rounded-3xl">
     <section class="blue_section text-center px-10 pt-2 pb-6 rounded-br-3xl rounded-bl-3xl md:rounded-3xl">
       <p class="p_Color mb-4 md:mt-4 md:text-lg md:pb-2">Your Result</p>
-      <div class="circle m-auto flex flex-col justify-center">
+      <div class="circle m-auto flex flex-col justify-center aspect-square rounded-full w-32 h-32 md:w-40 md:h-40">
         <h1 class="text-white text-5xl font-bold md:text-6xl">76</h1>
         <p class="p_Color text-sm">of 100</p>
       </div>
